...
        android:text="0"
        android:textStyle="bold"
        android:textSize="50dp"
        android:textColor="#FFFFFF"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp"
        android:layout_above="@id/nums"/>


    <LinearLayout
        android:id="@+id/nums"
        android:layout_width="match_parent"
        android:layout_height="564dp"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/ser"
                style="@style/Button1"
                android:text="!" />

            <Button
                android:id="@+id/num7"
                style="@style/Button2"
                android:text="7" />

            <Button
                android:id="@+id/num4"
                style="@style/Button2"
                android:text="4" />

            <Button
                android:id="@+id/num1"
                style="@style/Button2"
...
            <Button
                android:id="@+id/F"
                style="@style/Button1"
                android:text="F" />

            <Button
                android:id="@+id/num8"
                style="@style/Button2"
                android:text="8" />

            <Button
                android:id="@+id/num5"
                style="@style/Button2"
                android:text="5" />

            <Button
                android:id="@+id/num2"
                style="@style/Button2"
                android:text="2" />

            <Button
                android:id="@+id/num0"
                style="@style/Button2"
                android:text="0" />

            <Button
                android:id="@+id/btimc"
                style="@style/Button1"
                android:text="IMC" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/ac"
                style="@style/Button1"
                android:text="ac" />

            <Button
                android:id="@+id/num9"
                style="@style/Button2"
                android:text="9" />

            <Button
                android:id="@+id/num6"
                style="@style/Button2"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/div"
                style="@style/Button1"
                android:text="/" />

            <Button
                android:id="@+id/times"
                style="@style/Button1"
                android:text="X" />

            <Button
                android:id="@+id/min"
                style="@style/Button1"
                android:text="-" />

            <Button
                android:id="@+id/plus"
                style="@style/Button1"
                android:text="+" />

            <Button
                android:id="@+id/equal"
                style="@style/Button1"
                android:text="=" />

            <Button
                android:id="@+id/siguiente"
                style="@style/Button1"
                android:text="sig" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
