...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <RadioGroup
        android:id="@+id/rgContenedor"
        android:layout_width="312dp"
        android:layout_height="153dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rbCuadrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cuadrado" />

        <RadioButton
            android:id="@+id/rbCirculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Circulo" />

        <RadioButton
            android:id="@+id/rbRectangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rectangulo" />

        <RadioButton
            android:id="@+id/rbTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Triangulo" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="91dp" />

    <Button
        android:id="@+id/btSeleccionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:backgroundTint="#8D90CF"
        android:text="Seleccionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgContenedor" />

    <Button
...
